--- a/package.json
+++ b/package.json
@@ -45,7 +45,8 @@
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "typeorm": "^0.3.20",
-    "winston": "^3.17.0"
+    "winston": "^3.17.0",
+    "winston-console-format": "^1.0.8"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
