--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -8,7 +8,7 @@ services:
       - "5432:5432"
     environment:
       POSTGRES_USER: grid
-      POSTGRES_PASSWORD: grid8
+      POSTGRES_PASSWORD: grid8 #this is safe as it's for development only
       POSTGRES_DB: grid
     volumes:
       - postgres_data:/var/lib/postgresql/data
