--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "migration:generate": "typeorm-ts-node-commonjs -d typeorm.config.ts migration:generate",
     "migration:create": "typeorm-ts-node-commonjs -d typeorm.config.ts migration:create",
     "migration:run": "typeorm-ts-node-commonjs -d typeorm.config.ts migration:run",
+    "migration:revert": "typeorm-ts-node-commonjs -d typeorm.config.ts migration:revert",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
